[package]
name = "sdl_multiwindow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dyn-clone = "1.0.16"
lazy_static = "1.4.0"
sdl2 = { version = "0.36.0", features = ["ttf", "gfx"] }

[dependencies.gl]
git = "https://github.com/bjz/gl-rs"
